Closed Bug 1202176 Opened 10 years ago Closed 10 years ago

Tab drag preview position is off when using e10s and HiDPI

Categories

(Firefox :: Tabbed Browser, defect)

43 Branch
Unspecified
Windows
defect
Not set
normal
Points:
1

Tracking

()

RESOLVED FIXED
Firefox 43
Tracking Status
e10s m8+ ---
firefox43 --- fixed

People

(Reporter: bram.speeckaert, Assigned: enndeakin)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0 Build ID: 20150905030205 Steps to reproduce: Make sure e10s is on and that DPI scaling is active (I have mine on 150%). Drag a tab around. Actual results: The distance between the mouse pointer and the tab preview increases as the mouse is moved to the right. Expected results: The distance between the mouse cursor and the tab preview should be constant.
OS: Unspecified → Windows
Component: Untriaged → Tabbed Browser
Assignee: nobody → gkrizsanits
tracking-e10s: --- → m8+
Attached patch FixSplinter Review
This is a quick fix for another device/css pixels issue.
Assignee: gkrizsanits → enndeakin
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8660031 - Flags: review?(tnikkel)
Attachment #8660031 - Flags: review?(tnikkel) → review+
url: https://hg.mozilla.org/integration/mozilla-inbound/rev/aa3457f5ddc2adb70c72879c0465e5eee92f6be0 changeset: aa3457f5ddc2adb70c72879c0465e5eee92f6be0 user: Neil Deakin <neil@mozilla.com> date: Mon Sep 14 15:18:44 2015 -0400 description: Bug 1202176, adjust coordinates from device to css pixels when drag popup moves, r=tn
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 43
See Also: → 1205511
Points: --- → 1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: