Bug 1202176, adjust coordinates from device to css pixels when drag popup moves, r=tn